--- a/LeagueFriends/app/build.gradle
+++ b/LeagueFriends/app/build.gradle
@@ -5,6 +5,10 @@ plugins {
 
 apply plugin: 'kotlin-kapt'
 
+Properties properties = new Properties()
+properties.load(project.rootProject.file('local.properties').newDataInputStream())
+def RIOT_API_KEY = properties.getProperty('api.key')
+
 android {
     compileSdk 32
 
